Added categories/deadline/creationDate/ Edit todos

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.js"></script>
     <title>Mr-Todo</title>
   </head>
   <body>
