--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#54686e" />
     <meta name="msapplication-TileColor" content="#603cba" />
     <meta name="theme-color" content="#ffffff" />
+    <script src="https://raw.githubusercontent.com/HubSpot/pace/v1.0.0/pace.min.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
